working on skill bar

--- a/index.html
+++ b/index.html
@@ -26,148 +26,159 @@
             </button>
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link" href="#tech">TECH
 							<span class="sr-only">(current)</span>
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="agile.html">Agile</a>
+						<a class="nav-link" href="#agile">Agile</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="softskills.html">Soft Skills</a>
+						<a class="nav-link" href="#softskills">Soft Skills</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
+						<a class="nav-link" href="#contact">Contact</a>
 					</li>
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link" href="index.html">Home</a>
-					</li>
+					</li>  -->
 				</ul>
 			</div>
 		</nav>
 	</header>
-
-	<!--CONTENT-->
 	<div data-spy="scroll" data-target="#test-navbar" data-offset="0">
-		<div class="container-fluid content">
+
+		<!--CONTENT-->
+		<div data-spy="scroll" data-target="#test-navbar" data-offset="0">
+			<div class="container-fluid content">
+				<div class="row">
+					<div class="col-lg-10 landing-image image"></div>
+				</div>
+			</div>
+
+			<!--TYPEWRITER-->
 			<div class="row">
-				<div class="col-lg-10 landing-image image"></div>
-			</div>
-		</div>
-
-		<!--TYPEWRITER-->
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="typewriter" id="landing-content">
-					<h1>I'm a full stack developer.</h1>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!--TECH CONTAINER-->
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<div class="tech-image image"></div>
-			</div>
-		</div>
-
-		<!-- CARDS -->
-		<div class="row cards-tech">
-			<div class="col-sm-4">
-				<div class="card">
-					<div class="card-body">
-						<h5 class="card-title">FRONT END</h5>
-						<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit. sit amet
-							consectetur adipisicing elit Corporis, accusamus vitae praesentium eum enim temporibus neque
-							asperiores officiis odit magnam repellat illo!</p>
-						<a href="#" class="btn btn-secondary" target="_blank">Portfolio</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-4">
-				<div class="card">
-					<div class="card-body">
-						<h5 class="card-title">BACK END</h5>
-						<p class="card-text">10 Lorem ipsum dolor,, sit amet consectetur adipisicing elit sit amet
-							consectetur adipisicing elit. Corporis, accusamus vitae praesentium eum enim temporibus
-							neque asperiores officiis odit magnam repellat illo!</p>
-						<a href="#" class="btn btn-secondary" target="_blank">Portfolio 1</a>
-						<a href="#" class="btn btn-secondary" target="_blank">Portfolio 2</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-4">
-				<div class="card">
-					<div class="card-body">
-						<h5 class="card-title">REQUIREMENTS &<br> TESTING</h5>
-							<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis,
-								accusamus vitae praesentium eum enim temporibus neque asperiores officiis odit magnam
-								repellat illo!</p>
-							<a href="https://www.ireb.org/en" class="btn btn-secondary" target="_blank">IREB</a>
-							<a href="https://www.istqb.org/" class="btn btn-secondary" target="_blank">ISTQB</a>
+				<div class="col-lg-12">
+					<div class="typewriter" id="landing-content">
+						<h1>I'm a full stack developer.</h1>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<!--PROGRESS SKILLS-->
-		<div class="row progress-skills">
-			<div class="col">
-				<div class="progress">
-					<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-						aria-valuemin="0" aria-valuemax="100" style="width:50%">
-						50% Complete
+		<!--TECH CONTAINER-->
+		<div class="container" id="tech">
+			<div class="row cards-tech">
+			
+				<div class="col-sm-6">
+					<div class="card">
+						<div class="card-body">
+							<h5 class="card-title">BACK END</h5>
+							<p class="card-text">10 Lorem ipsum dolor,, sit amet consectetur adipisicing elit sit amet
+								consectetur adipisicing elit. Corporis, accusamus vitae praesentium eum enim temporibus
+								neque asperiores officiis odit magnam repellat illo!</p>
+							<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio 1</a>
+							<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio 2</a>
+						</div>
 					</div>
-					<span class="progress-type">HTML/HTML5</span>
 				</div>
-				<div class="progress">
-					<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-						aria-valuemax="100" style="width:40%">
-						40% Complete
+				<div class="col-sm-6">
+					<div class="card">
+						<div class="card-body">
+
+
+                        <h5 class="card-title">FRONT END</h5>
+							<p class="card-text">I am creative. <br>I love simple, outstanding design which expose the product.
+								<br>I focus on user experience.</p>
+								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
+							
+						</div>
 					</div>
-					<span class="progress-type">CSS/CSS3</span>
 				</div>
-				<div class="progress">
-					<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
-						aria-valuemin="0" aria-valuemax="100" style="width:10%">
-						10%
+
+
+
+
+
+			</div>
+
+			<!-- CARDS -->
+			<div class="row cards-tech">
+            	<div class="col-sm-6">
+					<div class="card">
+						<div class="card-body">
+							<h5 class="card-title">REQUIREMENTS &<br> TESTING</h5>
+								<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+									Corporis,
+									accusamus vitae praesentium eum enim temporibus neque asperiores officiis odit
+									magnam
+									repellat illo!</p>
+								<a href="https://www.ireb.org/en" class="btn btn-outline-secondary" target="_blank">IREB</a>
+								<a href="https://www.istqb.org/" class="btn btn-outline-secondary" target="_blank">ISTQB</a>
+						</div>
 					</div>
-					<span class="progress-type">JS/TypeScript</span>
 				</div>
-				<div class="progress">
-					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
-						aria-valuemin="0" aria-valuemax="100" style="width:5%">
-						5%
-					</div>
-					<span class="progress-type">Python/Django</span>
+				<div class="col-sm-6">
+					<div class="tech-image image"></div>
 				</div>
-				<div class="progress">
-					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
-						aria-valuemin="0" aria-valuemax="100" style="width:20%">
-						20% Complete
+			</div>
+
+			<!--PROGRESS SKILLS-->
+			<div class="row progress-skills">
+				<div class="col">
+					<div class="progress">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+							aria-valuemin="0" aria-valuemax="100" style="width:50%">
+							50% Complete
+						</div>
+						<span class="progress-type">HTML/HTML5</span>
 					</div>
-					<span class="progress-type">SQL</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50"
+							aria-valuemin="0" aria-valuemax="100" style="width:40%">
+							40% Complete
+						</div>
+						<span class="progress-type">CSS/CSS3</span>
+					</div>
+					<div class="progress">
+						<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
+							aria-valuemin="0" aria-valuemax="100" style="width:10%">
+							10%
+						</div>
+						<span class="progress-type">JS/TypeScript</span>
+					</div>
+					<div class="progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
+							aria-valuemin="0" aria-valuemax="100" style="width:5%">
+							5%
+						</div>
+						<span class="progress-type">Python/Django</span>
+					</div>
+					<div class="progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
+							aria-valuemin="0" aria-valuemax="100" style="width:20%">
+							20% Complete
+						</div>
+						<span class="progress-type">SQL</span>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
 
 
 
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-	</script>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+		</script>
 
 </body>
 
