--- a/tech.html
+++ b/tech.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body> -->
 	<!-- NAVIGATION -->
 	<!-- <header>
 		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
@@ -148,7 +148,7 @@
                 </span>
 		</div>
 	</footer> -->
-
+<!-- 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 	</script>
@@ -161,4 +161,4 @@
 
 </body>
 
-</html>
+</html> -->
