finally fixed main image

--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
 		<!--CONTENT-->
 		<div data-spy="scroll" data-target="#test-navbar" data-offset="0">
 			<div class="container-fluid content">
-				<div class="row">
-					<div class="col-lg-10 landing-image image"></div>
+					<div class="card landing-page">
+						<img class="landing-image image">
+						<div class="card-img-overlay">
+							<!-- <h5 class="card-title">Card title</h5>
+							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+								additional content. This content is a little bit longer.</p>
+							<p class="card-text">Last updated 3 mins ago</p> -->
+						</div>
 				</div>
 			</div>
 
@@ -68,59 +74,49 @@
 		</div>
 
 		<!--TECH CONTAINER-->
+		<!--CARDS-->
 		<div class="container" id="tech">
 			<div class="row cards-tech">
-			
 				<div class="col-sm-6">
 					<div class="card">
-						<div class="card-body">
-							<h5 class="card-title">BACK END</h5>
-							<p class="card-text">10 Lorem ipsum dolor,, sit amet consectetur adipisicing elit sit amet
-								consectetur adipisicing elit. Corporis, accusamus vitae praesentium eum enim temporibus
-								neque asperiores officiis odit magnam repellat illo!</p>
-							<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio 1</a>
-							<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio 2</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6">
-					<div class="card">
-						<div class="card-body">
-
-
-                        <h5 class="card-title">FRONT END</h5>
-							<p class="card-text">I am creative. <br>I love simple, outstanding design which expose the product.
-								<br>I focus on user experience.</p>
+						<div class="card-body card-left">
+							<h5 class="card-title">FRONT END</h5>
+							<p class="card-text">I am creative. <br>I love simple, outstanding design which exposes the product.
+								<br>I focus on user experience. Coding is fun! To creat functional, beautiful websites is fun! I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my work:</p>
 								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
-							
 						</div>
 					</div>
 				</div>
-
-
-
-
-
+				<div class="col-sm-6">
+					<div class="card">
+						<div class="card-body card-right">
+							<h5 class="card-title">BACK END</h5>
+							<p class="card-text">I am persistent.
+								<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
+								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio 1</a>
+								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio 2</a>
+						</div>
+					</div>
+				</div>
 			</div>
 
-			<!-- CARDS -->
-			<div class="row cards-tech">
-            	<div class="col-sm-6">
+			<!-- CARDS AND TECH IAMGE -->
+			<div class="row cards-tech card-image">
+				<div class="col-sm-6">
 					<div class="card">
-						<div class="card-body">
+						<div class="card-body card-left">
 							<h5 class="card-title">REQUIREMENTS &<br> TESTING</h5>
-								<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-									Corporis,
-									accusamus vitae praesentium eum enim temporibus neque asperiores officiis odit
-									magnam
-									repellat illo!</p>
-								<a href="https://www.ireb.org/en" class="btn btn-outline-secondary" target="_blank">IREB</a>
-								<a href="https://www.istqb.org/" class="btn btn-outline-secondary" target="_blank">ISTQB</a>
+								<p class="card-text">I am a challanger.
+									<br>My entry into IT started as Manual QA Tester and than I was moved towards requirements. I have cetrification in both ISTQB and IREB Fundamentals. I have to add more thext here otherwise it does not good. If you are not familiar with the certification please see officail websties below:</p>
+									<a href="https://www.ireb.org/en" class="btn btn-outline-secondary"
+										target="_blank">IREB</a>
+									<a href="https://www.istqb.org/" class="btn btn-outline-secondary"
+										target="_blank">ISTQB</a>
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-6">
-					<div class="tech-image image"></div>
+				<div class="col-sm-6 ">
+					<div class="tech-image image jumbotron"></div>
 				</div>
 			</div>
 
