new cards in tech tab

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 		<!--CONTENT-->
 		<div data-spy="scroll" data-target="#test-navbar" data-offset="0">
 			<div class="container-fluid content">
-					<div class="card landing-page">
-						<img class="landing-image image">
-						<div class="card-img-overlay">
-							<!-- <h5 class="card-title">Card title</h5>
+				<div class="card landing-page">
+					<img class="landing-image image">
+					<div class="card-img-overlay">
+						<!-- <h5 class="card-title">Card title</h5>
 							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to
 								additional content. This content is a little bit longer.</p>
 							<p class="card-text">Last updated 3 mins ago</p> -->
-						</div>
+					</div>
 				</div>
 			</div>
 
@@ -77,7 +77,7 @@
 		<!--CARDS-->
 		<div class="container" id="tech">
 			<div class="row cards-tech">
-				<div class="col-sm-6">
+				<!-- <div class="col-sm-6">
 					<div class="card">
 						<div class="card-body card-left">
 							<h5 class="card-title">FRONT END</h5>
@@ -97,11 +97,56 @@
 								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio 2</a>
 						</div>
 					</div>
+				</div> -->
+
+				<!-- Card deck -->
+				<div class="card-deck">
+
+					<!-- Card -->
+					<div class="card mb-6">
+
+						<!--Card content-->
+						<div class="card-body">
+							<!--Title-->
+							<h4 class="card-title">FRONT END & TESTING</h4>
+							<!--Text-->
+							<p class="card-text">I am creative.
+								<br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically. I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
+								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
+								<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+								<button type="button" class="btn btn-outline-secondary">Read more</button>
+						</div>
+						<!--Card image-->
+						<div class="view overlay">
+							<div class="card-img-top tech-image image"></div>
+						</div>
+					</div>
+					<!-- /Card -->
+
+					<!-- Card -->
+					<div class="card mb-6">
+						<!--Card image-->
+						<div class="view overlay">
+							<div class="card-img-top backend-image image"></div>
+						</div>
+						<!--Card content-->
+						<div class="card-body">
+							<!--Title-->
+							<h4 class="card-title">BACK END & REQUIREMENTS</h4>
+							<!--Text-->
+							<p class="card-text">I am persistent.
+								<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
+								<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+								<button type="button" class="btn btn-outline-secondary">Read more</button>
+						</div>
+					</div>
+					<!-- /Card -->
 				</div>
+				<!-- /Card deck -->
 			</div>
 
 			<!-- CARDS AND TECH IAMGE -->
-			<div class="row cards-tech card-image">
+			<!-- <div class="row cards-tech card-image">
 				<div class="col-sm-6">
 					<div class="card">
 						<div class="card-body card-left">
@@ -118,7 +163,7 @@
 				<div class="col-sm-6 ">
 					<div class="tech-image image jumbotron"></div>
 				</div>
-			</div>
+			</div> -->
 
 			<!--PROGRESS SKILLS-->
 			<div class="row progress-skills">
@@ -161,10 +206,6 @@
 				</div>
 			</div>
 		</div>
-
-
-
-
 
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
