--- a/index.html
+++ b/index.html
@@ -166,56 +166,47 @@
 			</div> -->
 
 			<!--PROGRESS SKILLS-->
-			<div class="row progress-skills">
-				<div class="col">
-					<div class="progress">
-						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-							aria-valuemin="0" aria-valuemax="100" style="width:50%">
-							50% Complete
-						</div>
-						<span class="progress-type">HTML/HTML5</span>
+			<div id="SkillBox">
+				<div class="SkillBar">
+					<div id="Skill-HTML">
+						<span class="Skill-Area ">HTML</span>
+						<span class="PercentText ">100%</span>
 					</div>
-					<div class="progress">
-						<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50"
-							aria-valuemin="0" aria-valuemax="100" style="width:40%">
-							40% Complete
-						</div>
-						<span class="progress-type">CSS/CSS3</span>
+				</div>
+
+				<div class="SkillBar">
+					<div id="Skill-CSS">
+						<span class="Skill-Area ">CSS/CSS3</span>
+						<span class="PercentText ">70%</span>
 					</div>
-					<div class="progress">
-						<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
-							aria-valuemin="0" aria-valuemax="100" style="width:10%">
-							10%
-						</div>
-						<span class="progress-type">JS/TypeScript</span>
+				</div>
+				<div class="SkillBar">
+					<div id="Skill-JS">
+						<span class="Skill-Area ">Javascript</span>
+						<span class="PercentText ">65%</span>
 					</div>
-					<div class="progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
-							aria-valuemin="0" aria-valuemax="100" style="width:5%">
-							5%
-						</div>
-						<span class="progress-type">Python/Django</span>
-					</div>
-					<div class="progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
-							aria-valuemin="0" aria-valuemax="100" style="width:20%">
-							20% Complete
-						</div>
-						<span class="progress-type">SQL</span>
+				</div>
+				<div class="SkillBar">
+					<div id="Skill-Python">
+						<span class="Skill-Area ">Python </span>
+						<span class="PercentText ">80%</span>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-		</script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-		</script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-		</script>
+
+			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+				integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+				crossorigin="anonymous">
+			</script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+				integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+				crossorigin="anonymous">
+			</script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+				integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+				crossorigin="anonymous">
+			</script>
 
 </body>
 
