main page content added

--- a/index.html
+++ b/index.html
@@ -40,173 +40,166 @@
 					<li class="nav-item">
 						<a class="nav-link" href="#contact">Contact</a>
 					</li>
-					<!-- <li class="nav-item">
+					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home</a>
-					</li>  -->
+					</li>
 				</ul>
 			</div>
 		</nav>
 	</header>
 	<div data-spy="scroll" data-target="#test-navbar" data-offset="0">
 
-		<!--CONTENT-->
+		<!--SCROLL SPY-->
 		<div data-spy="scroll" data-target="#test-navbar" data-offset="0">
-			<div class="container-fluid content">
-				<div class="card landing-page">
-					<img class="landing-image image">
-					<div class="card-img-overlay">
-						<!-- <h5 class="card-title">Card title</h5>
-							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-								additional content. This content is a little bit longer.</p>
-							<p class="card-text">Last updated 3 mins ago</p> -->
+
+			<!--CONTENT-->
+			<div class="container" id="content">
+				<div class="row cards-content">
+
+					<!-- Card deck -->
+					<div class="card-deck ">
+
+						<!-- Card -->
+						<div class="card card-content-top mb-6">
+
+							<!--Card content/image only-->
+							<div class="card-body landing-image">
+								<img class="landing-image image">
+							</div>
+							</div>
+							<!-- /Card -->
+
+							<!-- Card -->
+							<div class="card card-content-top mb-6">
+								<!--Card content-->
+								<div class="card-body landing-content">
+									<!--Title-->
+									<h4 class="card-title">FULL STACK DEVELOPER <br>with passion for
+										<br>AGILE and SAFe</h4>
+										<!--Text-->
+										<p class="card-text">I am a challanger.
+											<br>My entry into IT started as Manual QA Tester and than I was moved towards requirements. I have cetrification in both ISTQB and IREB Fundamentals. I have to add more thext here otherwise it does not good. If you are not familiar with the certification please see officail websties below:</p>
+											<a href="https://ww2.jeppesen.com/" class="btn btn-outline-secondary"
+												target="_blank">IT in aviation</a>
+											<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-outline-secondary"
+												target="_blank">Human Resources</a>
+											<a href="https://tvn24.pl/" class="btn btn-outline-secondary"
+												target="_blank">TV News Media</a>
+								</div>
+							</div>
+							<!-- /Card -->
+						</div>
+						<!-- /Card deck -->
+					</div>
+
+					<!--TYPEWRITER-->
+					<div class="row">
+						<div class="col-lg-12">
+							<div class="typewriter" id="landing-content">
+								<h1>I'm a full stack developer.</h1>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 
-			<!--TYPEWRITER-->
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="typewriter" id="landing-content">
-						<h1>I'm a full stack developer.</h1>
-					</div>
-				</div>
-			</div>
-		</div>
+			<!--TECH CONTAINER-->
+			<!--CARDS-->
+			<div class="container" id="tech">
+				<div class="row cards-tech">
+					<!-- Card deck -->
+					<div class="card-deck">
 
-		<!--TECH CONTAINER-->
-		<!--CARDS-->
-		<div class="container" id="tech">
-			<div class="row cards-tech">
-				<!-- <div class="col-sm-6">
-					<div class="card">
-						<div class="card-body card-left">
-							<h5 class="card-title">FRONT END</h5>
-							<p class="card-text">I am creative. <br>I love simple, outstanding design which exposes the product.
-								<br>I focus on user experience. Coding is fun! To creat functional, beautiful websites is fun! I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my work:</p>
-								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6">
-					<div class="card">
-						<div class="card-body card-right">
-							<h5 class="card-title">BACK END</h5>
-							<p class="card-text">I am persistent.
-								<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
-								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio 1</a>
-								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio 2</a>
-						</div>
-					</div>
-				</div> -->
+						<!-- Card -->
+						<div class="card mb-6">
 
-				<!-- Card deck -->
-				<div class="card-deck">
-
-					<!-- Card -->
-					<div class="card mb-6">
-
-						<!--Card content-->
-						<div class="card-body">
-							<!--Title-->
-							<h4 class="card-title">FRONT END & TESTING</h4>
-							<!--Text-->
-							<p class="card-text">I am creative.
-								<br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically. I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
-								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
-								<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-								<button type="button" class="btn btn-outline-secondary">Read more</button>
-						</div>
-						<!--Card image-->
-						<div class="view overlay">
-							<div class="card-img-top tech-image image"></div>
-						</div>
-					</div>
-					<!-- /Card -->
-
-					<!-- Card -->
-					<div class="card mb-6">
-						<!--Card image-->
-						<div class="view overlay">
-							<div class="card-img-top backend-image image"></div>
-						</div>
-						<!--Card content-->
-						<div class="card-body">
-							<!--Title-->
-							<h4 class="card-title">BACK END & REQUIREMENTS</h4>
-							<!--Text-->
-							<p class="card-text">I am persistent.
-								<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
-								<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-								<button type="button" class="btn btn-outline-secondary">Read more</button>
-						</div>
-					</div>
-					<!-- /Card -->
-				</div>
-				<!-- /Card deck -->
-			</div>
-
-			<!-- CARDS AND TECH IAMGE -->
-			<!-- <div class="row cards-tech card-image">
-				<div class="col-sm-6">
-					<div class="card">
-						<div class="card-body card-left">
-							<h5 class="card-title">REQUIREMENTS &<br> TESTING</h5>
-								<p class="card-text">I am a challanger.
-									<br>My entry into IT started as Manual QA Tester and than I was moved towards requirements. I have cetrification in both ISTQB and IREB Fundamentals. I have to add more thext here otherwise it does not good. If you are not familiar with the certification please see officail websties below:</p>
-									<a href="https://www.ireb.org/en" class="btn btn-outline-secondary"
-										target="_blank">IREB</a>
+							<!--Card content-->
+							<div class="card-body">
+								<!--Title-->
+								<h4 class="card-title">FRONT END & TESTING</h4>
+								<!--Text-->
+								<p class="card-text">I am creative.
+									<br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically. I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
+									<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
 									<a href="https://www.istqb.org/" class="btn btn-outline-secondary"
 										target="_blank">ISTQB</a>
+									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+									<!--<button type="button" class="btn btn-outline-secondary">Read more</button>-->
+							</div>
+							<!--Card image-->
+							<div class="view overlay">
+								<div class="card-img-top tech-image image"></div>
+							</div>
+						</div>
+						<!-- /Card -->
+
+						<!-- Card -->
+						<div class="card mb-6">
+							<!--Card image-->
+							<div class="view overlay">
+								<div class="card-img-top backend-image image"></div>
+							</div>
+							<!--Card content-->
+							<div class="card-body">
+								<!--Title-->
+								<h4 class="card-title">BACK END & REQUIREMENTS</h4>
+								<!--Text-->
+								<p class="card-text">I am persistent.
+									<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
+									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+									<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
+									<a href="https://www.ireb.org/en" class="btn btn-outline-secondary"
+										target="_blank">IREB</a>
+
+							</div>
+						</div>
+						<!-- /Card -->
+					</div>
+					<!-- /Card deck -->
+				</div>
+
+				<!--PROGRESS SKILLS-->
+				<div id="SkillBox">
+					<div class="SkillBar">
+						<div id="Skill-HTML">
+							<span class="Skill-Area ">HTML</span>
+							<span class="PercentText ">100%</span>
+						</div>
+					</div>
+
+					<div class="SkillBar">
+						<div id="Skill-CSS">
+							<span class="Skill-Area ">CSS/CSS3</span>
+							<span class="PercentText ">70%</span>
+						</div>
+					</div>
+					<div class="SkillBar">
+						<div id="Skill-JS">
+							<span class="Skill-Area ">Javascript</span>
+							<span class="PercentText ">65%</span>
+						</div>
+					</div>
+					<div class="SkillBar">
+						<div id="Skill-Python">
+							<span class="Skill-Area ">Python </span>
+							<span class="PercentText ">80%</span>
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-6 ">
-					<div class="tech-image image jumbotron"></div>
-				</div>
-			</div> -->
-
-			<!--PROGRESS SKILLS-->
-			<div id="SkillBox">
-				<div class="SkillBar">
-					<div id="Skill-HTML">
-						<span class="Skill-Area ">HTML</span>
-						<span class="PercentText ">100%</span>
-					</div>
-				</div>
-
-				<div class="SkillBar">
-					<div id="Skill-CSS">
-						<span class="Skill-Area ">CSS/CSS3</span>
-						<span class="PercentText ">70%</span>
-					</div>
-				</div>
-				<div class="SkillBar">
-					<div id="Skill-JS">
-						<span class="Skill-Area ">Javascript</span>
-						<span class="PercentText ">65%</span>
-					</div>
-				</div>
-				<div class="SkillBar">
-					<div id="Skill-Python">
-						<span class="Skill-Area ">Python </span>
-						<span class="PercentText ">80%</span>
-					</div>
-				</div>
-			</div>
 
 
-			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-				integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-				crossorigin="anonymous">
-			</script>
-			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-				integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-				crossorigin="anonymous">
-			</script>
-			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-				integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-				crossorigin="anonymous">
-			</script>
+				<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+					integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+					crossorigin="anonymous">
+				</script>
+				<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+					integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+					crossorigin="anonymous">
+				</script>
+				<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+					integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+					crossorigin="anonymous">
+				</script>
 
 </body>
 
