--- a/index.html
+++ b/index.html
@@ -47,110 +47,48 @@
 			</div>
 		</nav>
 	</header>
+	<!--<div data-spy="scroll" data-target="#test-navbar" data-offset="0">-->
+
+	<!--SCROLL SPY-->
 	<div data-spy="scroll" data-target="#test-navbar" data-offset="0">
 
-		<!--SCROLL SPY-->
-		<div data-spy="scroll" data-target="#test-navbar" data-offset="0">
+		<!--CONTENT-->
+		<div class="container" id="content">
+			<div class="row cards-content">
 
-			<!--CONTENT-->
-			<div class="container" id="content">
-				<div class="row cards-content">
+				<!-- Card deck -->
+				<div class="card-deck ">
 
-					<!-- Card deck -->
-					<div class="card-deck ">
+					<!-- Card -->
+					<div class="card card-content-top mb-4">
 
-						<!-- Card -->
-						<div class="card card-content-top mb-6">
-
-							<!--Card content/image only-->
-							<div class="card-body landing-image">
-								<img class="landing-image image">
-							</div>
-							</div>
-							<!-- /Card -->
-
-							<!-- Card -->
-							<div class="card card-content-top mb-6">
-								<!--Card content-->
-								<div class="card-body landing-content">
-									<!--Title-->
-									<h4 class="card-title">FULL STACK DEVELOPER <br>with passion for
-										<br>AGILE and SAFe</h4>
-										<!--Text-->
-										<p class="card-text">I am a challanger.
-											<br>My entry into IT started as Manual QA Tester and than I was moved towards requirements. I have cetrification in both ISTQB and IREB Fundamentals. I have to add more thext here otherwise it does not good. If you are not familiar with the certification please see officail websties below:</p>
-											<a href="https://ww2.jeppesen.com/" class="btn btn-outline-secondary"
-												target="_blank">IT in aviation</a>
-											<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-outline-secondary"
-												target="_blank">Human Resources</a>
-											<a href="https://tvn24.pl/" class="btn btn-outline-secondary"
-												target="_blank">TV News Media</a>
-								</div>
-							</div>
-							<!-- /Card -->
-						</div>
-						<!-- /Card deck -->
-					</div>
-
-					<!--TYPEWRITER-->
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="typewriter" id="landing-content">
-								<h1>I'm a full stack developer.</h1>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!--TECH CONTAINER-->
-			<!--CARDS-->
-			<div class="container" id="tech">
-				<div class="row cards-tech">
-					<!-- Card deck -->
-					<div class="card-deck">
-
-						<!-- Card -->
-						<div class="card mb-6">
-
-							<!--Card content-->
-							<div class="card-body">
-								<!--Title-->
-								<h4 class="card-title">FRONT END & TESTING</h4>
-								<!--Text-->
-								<p class="card-text">I am creative.
-									<br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically. I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
-									<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
-									<a href="https://www.istqb.org/" class="btn btn-outline-secondary"
-										target="_blank">ISTQB</a>
-									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-									<!--<button type="button" class="btn btn-outline-secondary">Read more</button>-->
-							</div>
-							<!--Card image-->
-							<div class="view overlay">
-								<div class="card-img-top tech-image image"></div>
+						<!--Card content/image only-->
+						<div class="card-body landing-image">
+							<img class="landing-image image">
 							</div>
 						</div>
 						<!-- /Card -->
 
 						<!-- Card -->
-						<div class="card mb-6">
-							<!--Card image-->
-							<div class="view overlay">
-								<div class="card-img-top backend-image image"></div>
-							</div>
+						<div class="card card-content-top mb-4">
 							<!--Card content-->
-							<div class="card-body">
+							<div class="card-body landing-content">
 								<!--Title-->
-								<h4 class="card-title">BACK END & REQUIREMENTS</h4>
-								<!--Text-->
-								<p class="card-text">I am persistent.
-									<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
-									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-									<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
-									<a href="https://www.ireb.org/en" class="btn btn-outline-secondary"
-										target="_blank">IREB</a>
+								<h4 class="card-title">FULL STACK DEVELOPER <br>with passion for
+									<br>AGILE and SAFe</h4><br>
+									<!--Text-->
 
+									<p class="card-text"> I am a challanger.<br><br>Before being bitten by the programming bug I had been
+										working within IT with requirements developing one of charts, maps & flight
+										planners in distributed awesome team for an large aviation company. Click:
+										<a href="https://ww2.jeppesen.com/"
+											target="_blank"><i class="fas fa-plane"></i></a>
+										<br><br>Experience in Human Resources gave me wide business perspective on how vaulable is to get not only highly skilled but also suitably matched employees for an organization.
+										<a href="https://cpljobs.com/pl/?lang=en"
+											target="_blank"><i class="fas fa-user-friends"></i></a><br><br>
+                                            Working in TV News Media was an awesome experiecne. I thrived coordinationg TV crews as well as verifing and passing huge amonund of information under huge time pressure. I belive effective communication is a key success to every project.
+										<a href="https://tvn24.pl/" target="_blank"><i class="fas fa-tv"></i></a>
+									</p>
 							</div>
 						</div>
 						<!-- /Card -->
@@ -158,49 +96,255 @@
 					<!-- /Card deck -->
 				</div>
 
-				<!--PROGRESS SKILLS-->
-				<div id="SkillBox">
-					<div class="SkillBar">
-						<div id="Skill-HTML">
-							<span class="Skill-Area ">HTML</span>
-							<span class="PercentText ">100%</span>
-						</div>
-					</div>
-
-					<div class="SkillBar">
-						<div id="Skill-CSS">
-							<span class="Skill-Area ">CSS/CSS3</span>
-							<span class="PercentText ">70%</span>
-						</div>
-					</div>
-					<div class="SkillBar">
-						<div id="Skill-JS">
-							<span class="Skill-Area ">Javascript</span>
-							<span class="PercentText ">65%</span>
-						</div>
-					</div>
-					<div class="SkillBar">
-						<div id="Skill-Python">
-							<span class="Skill-Area ">Python </span>
-							<span class="PercentText ">80%</span>
+				<!--TYPEWRITER-->
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="typewriter" id="landing-content">
+							<h1>I'm a full stack developer now.</h1>
 						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<!--TECH CONTAINER-->
+		<!--CARDS-->
+		<div class="container" id="tech">
+			<div class="row cards-tech">
+				<!-- Card deck -->
+				<div class="card-deck">
+
+					<!-- Card -->
+					<div class="card mb-4">
+
+						<!--Card content-->
+						<div class="card-body">
+							<!--Title-->
+							<h4 class="card-title">FRONT END & TESTING</h4>
+							<!--Text-->
+							<p class="card-text">I am creative.<br>
+								<br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically.<br>I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
+								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
+								<a href="https://www.istqb.org/" class="btn btn-outline-secondary"
+									target="_blank">ISTQB</a>
+								<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+								<!--<button type="button" class="btn btn-outline-secondary">Read more</button>-->
+						</div>
+						<!--Card image-->
+						<div class="view overlay">
+							<div class="card-img-top tech-image image"></div>
+						</div>
+					</div>
+					<!-- /Card -->
+
+					<!-- Card -->
+					<div class="card mb-4">
+						<!--Card image-->
+						<div class="view overlay">
+							<div class="card-img-top backend-image image"></div>
+						</div>
+						<!--Card content-->
+						<div class="card-body">
+							<!--Title-->
+							<h4 class="card-title">BACK END & REQUIREMENTS</h4>
+							<!--Text-->
+							<p class="card-text">I am persistent.<br>
+								<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
+								<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
+								<a href="https://www.ireb.org/en" class="btn btn-outline-secondary"
+									target="_blank">IREB</a>
+
+						</div>
+					</div>
+					<!-- /Card -->
+				</div>
+				<!-- /Card deck -->
+			</div>
+
+			<!--PROGRESS SKILLS-->
+			<div id="SkillBox">
+				<div class="SkillBar">
+					<div id="Skill-HTML">
+						<span class="Skill-Area ">HTML</span>
+						<span class="PercentText ">100%</span>
+					</div>
+				</div>
+
+				<div class="SkillBar">
+					<div id="Skill-CSS">
+						<span class="Skill-Area ">CSS/CSS3</span>
+						<span class="PercentText ">70%</span>
+					</div>
+				</div>
+				<div class="SkillBar">
+					<div id="Skill-JS">
+						<span class="Skill-Area ">Javascript</span>
+						<span class="PercentText ">65%</span>
+					</div>
+				</div>
+				<div class="SkillBar">
+					<div id="Skill-Python">
+						<span class="Skill-Area ">Python </span>
+						<span class="PercentText ">80%</span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--AGILE PAGE-->
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<div class="agile-image image"></div>
+				</div>
+			</div>
+
+			<div class="row cards-agile">
+				<div class="col-sm-4">
+					<div class="card">
+						<div class="card-body">
+							<h5 class="card-title">SCRUM</h5>
+							<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id,
+								asperiores? Ipsum tempore culpa magni. Id illum obcaecati temporibus vitae accusantium,
+								commodi quos maiores et. Provident dolore reprehenderit est molestiae obcaecati?</p>
+							<a href="https://www.scrum.org/" class="btn btn-secondary" target="_blank">Official
+								website</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="card">
+						<div class="card-body">
+							<h5 class="card-title">SAFe</h5>
+							<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+								nostrum autem animi voluptatem. Inventore, repudiandae? Vel voluptates quo nobis sequi
+								voluptas laboriosam alias. Eligendi, deleniti dolorum a porro earum consectetur.</p>
+							<a href="https://www.scaledagileframework.com/" class="btn btn-secondary"
+								target="_blank">Official website</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--CONTACT PAGE-->
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col">
+					<div class="contact-image image"></div>
+				</div>
+			</div>
 
 
-				<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-					integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-					crossorigin="anonymous">
-				</script>
-				<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-					integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-					crossorigin="anonymous">
-				</script>
-				<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-					integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-					crossorigin="anonymous">
-				</script>
+			<section class="contact" id="contact">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+							<hr>
+						</div>
+						<div class="col-md-6">
+							<div class="address list-styled">
+								<h5><i class="fas fa-map-pin"></i> Address</h5>
+								<ul class="list-unstyled">
+									<li> Pargasgatan 34</li>
+									<li> 16471 Stockholm</li>
+								</ul>
+							</div>
+							<div class="email list-styled">
+								<h5><i class="fas fa-at"></i> Email</h5>
+								<ul class="list-unstyled">
+									<li> anna.jan.jansson@gmail.com</li>
+								</ul>
+							</div>
+							<div class="phone list-styled">
+								<h5><i class="fas fa-phone-volume"></i> Phone</h5>
+								<ul class="list-unstyled">
+									<li> +46 793360854</li>
+								</ul>
+							</div>
+							<div>
+								<h4>Get in touch</h4>
+								<hr>
+							</div>
+							<div class="social">
+								<ul class="list-inline list-unstyled">
+									<li class="list-inline-item">
+										<a href="https://www.linkedin.com/in/anna-j-605a40177/"
+											target="_blank"><i class="fab fa-linkedin-in"></i>
+										</a>
+									</li>
+									<li class="list-inline-item">
+										<a href="https://github.com/annaweronica?tab=repositories"
+											target="_blank"><i class="fab fa-github"></i>
+										</a>
+									</li>
+									<li class="list-inline-item">
+										<a href="https://www.meetup.com/members/276920213/"
+											target="_blank"><i class="fab fa-meetup"></i>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="card">
+								<div class="card-body">
+									<form>
+										<div class="form-row">
+											<div class="form-group col-md-6">
+												<input id="Full Name" name="Full Name" placeholder="Full Name" class="form-control" type="text">
+                            </div>
+												<div class="form-group col-md-6">
+													<input id="Mobile No." name="Mobile No." placeholder="Mobile No." class="form-control" required="required" type="text">
+  </div>
+												</div>
+												<div class="form-row">
+													<div class="form-group col-md-12">
+														<input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                            </div>
+														<div class="form-group col-md-12">
+															<textarea id="comment" name="comment" cols="40" rows="5" placeholder="Your Message"class="form-control"></textarea>
+														</div>
+													</div>
 
+													<div class="form-row">
+														<button type="button" class="btn btn-secondary">Submit</button>
+													</div>
+									</form>
+								</div>
+							</div>
+
+						</div>
+
+					</div>
+					<hr>
+				</div>
+			</section>
+		</div>
+
+
+		<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+			<div class="container text-center">
+				<span class="download">
+            <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
+							<i class="fas fa-download"></i></a></small><br>
+                            </span>
+				<span class="copy-right">
+				<small>Copyright &copy; Anna Janiak</small>
+                </span>
+			</div>
+		</footer>
+
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+		</script>
+	</div>
 </body>
 
 </html>
